--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="">
 <head>
-    <meta charset="UTF-8" />
-    <title>Learn Game Development at Zenva.com</title>
+    <meta charset="UTF-8">
+    <title>Game Title Here</title>
+    <script src="js/phaser.min.js">  
+    </script>
+    <script src="js/main.js"></script>
+    <script src="js/SceneMain.js"></script>
 </head>
 <body>
-  <script src="js/phaser.js"></script>
-  <script src="js/game.js"></script>
+
+<div id="'phaser-game'"></div>
+
+
 </body>
 </html>
